<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c1"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back">
        <TextView
                android:id="@+id/toolbar_title"
                android:text="@string/create_wallet"
                style="@style/toolbar_title"/>
    </android.support.v7.widget.Toolbar>

    <TextView
            style="@style/b0_style"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/create_wallet"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/gradient_rectangle_oval_bg"
            android:elevation="@dimen/dp_1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:paddingTop="@dimen/dp_17">

        <TextView
                style="@style/b5_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:gravity="center_vertical"
                android:text="@string/create_wallet_warn_1"
                android:lineSpacingExtra="@dimen/dp_5"/>

        <TextView
                style="@style/b5_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/create_wallet_warn_2"
                android:lineSpacingExtra="@dimen/dp_5"/>


    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20">

        <com.gs.keyboard.SecurityEditText
                android:id="@+id/et_password"
                style="@style/c7_t3_edit_text"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ`-=[]\;,./~!@#$%^*()_+}{:?&amp;&lt;&gt;&quot;&apos;"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/set_password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:paddingEnd="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"/>

        <View
                style="@style/c9_horizontal_line"
                android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20">

        <com.gs.keyboard.SecurityEditText
                android:id="@+id/et_repassword"
                style="@style/c7_t3_edit_text"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ`-=[]\;,./~!@#$%^*()_+}{:?&amp;&lt;&gt;&quot;&apos;"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/reinput_psd"
                android:inputType="textPassword"
                android:maxLength="32"
                android:paddingEnd="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"/>

        <View
                style="@style/c9_horizontal_line"
                android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_12"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_agree_create_wallet"
                style="@style/c7t4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_agreement_selected"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@drawable/ic_agreement_selected"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingStart="@dimen/dp_16"
                android:text="@string/agreement_1"/>

        <TextView
                android:id="@+id/tv_user_agreement"
                style="@style/c3t4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/agreement_2"/>

    </LinearLayout>


    <Button
            android:id="@+id/btn_create_wallet"
            style="@style/public_btn_style"
            android:layout_marginTop="@dimen/dp_80"
            android:enabled="false"
            android:text="@string/create_wallet"
            android:textColor="@drawable/public_text_color_selector"
            android:textSize="@dimen/t2"
            android:textStyle="bold"/>


</LinearLayout>
